# Qt6_ITI

./: README.md
Task1_Shapes/Task1_Shapes/: CMakeLists.txt  Main.qml  main.cpp
Task2_images/Images_Buttons/: CMakeLists.txt  Main.qml  main.cpp
Task3/CapsLockLed/: CMakeLists.txt  Led_page.qml  Main.qml  Temp_page.qml  capslock.cpp  capslock.h  main.cpp  src.qrc  systemmonitor.cpp  systemmonitor.h
